updated dll generation

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /.vs/Ony.OxygenNotIncluded.Lib/v16
 /Ony.OxygenNotIncluded.Lib/obj/Debug
 /Ony.OxygenNotIncluded.Lib/Ony.OxygenNotIncluded.Lib.csproj.user
+/Ony.OxygenNotIncluded.Lib/bin/Debug
