--- a/Ony.OxygenNotIncluded.Lib/Ony.OxygenNotIncluded.Lib.csproj
+++ b/Ony.OxygenNotIncluded.Lib/Ony.OxygenNotIncluded.Lib.csproj
@@ -5,7 +5,7 @@
     <ProjectGuid>{2070F6DF-EDED-4FDC-B4E3-76096FE939B4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <AssemblyName>ClassLibrary</AssemblyName>
+    <AssemblyName>Ony.OxygenNotIncluded.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
